Jaswanth | #2234 | Set configuration and max perm size for surefire plugin